--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sharedstate",
+  "name": "react-shared-state",
   "version": "1.0.0",
   "description": "Create reusable state for your react components",
   "main": "index.js",
